<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="161dp"
        android:layout_height="55dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="155dp"
        android:background="#AD1457"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="34dp"
        android:text="@string/nice_to_see_you_again"
        android:textAlignment="center"
        android:textColor="#3DA027"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="33dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#E31212"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>